Add authorization key header and enforce it.
