# src/app.ts
@@ -9,13 +9,38 @@ import {
   volumesRouter,
 } from "./routes";
 import { appErrorHandler } from "./middlewares/appErrorHandler";
-import express from "express";
+import express, { NextFunction, Request, Response } from "express";
+import { NotAuthorizedError } from "./errors/notAuthorizedError";
 import path from "path";
 import pino from "pino-http";
+import { PrismaClient } from "@prisma/client";
 import { randomUUID } from "crypto";
+import { errorHandler } from "./middlewares";
 dotenv.config();
 
+const prisma = new PrismaClient();
 const app = express();
+
+// Swagger
+// Use a workaround for swagger-ui-dist not being able to set custom swagger URL
+// The swaggerPath accounts for running using ts-node (start:dev) versus tsc (start).
+const swaggerPath = fs.existsSync(path.join(__dirname, "../swagger"))
+  ? path.join(__dirname, "../swagger")
+  : path.join(__dirname, "../../swagger");
+app.use("/swagger-files", express.static(swaggerPath));
+const swaggerRoutePath = "/swagger";
+const swaggerUIFSPath = swaggerUI.getAbsoluteFSPath();
+const indexContent = fs
+  .readFileSync(path.join(swaggerUIFSPath, "swagger-initializer.js"))
+  .toString()
+  .replace(
+    /https:\/\/petstore.swagger.io\/.*\/swagger.(json|yaml)/,
+    `http://${process.env.HOST}:${process.env.PORT}/swagger-files/serverManagerService.yaml`
+  );
+app.get(`${swaggerRoutePath}/swagger-initializer.js`, (req, res) => {
+  res.send(indexContent);
+});
+app.use(swaggerRoutePath, express.static(swaggerUIFSPath));
 
 // This makes it very clear which logs are related to the same request.
 // Allow the caller to set this header to increase tracability across
@@ -47,33 +72,31 @@ app.use((req, res, next) => {
   next();
 });
 
+// Before routing to the REST APIs, authorize the request.
+app.use(
+  errorHandler(async (req: Request, res: Response, next: NextFunction) => {
+    await prisma.authorizationKey
+      .findUniqueOrThrow({
+        where: {
+          owner_value: {
+            owner: String(req.headers["owner"]),
+            value: String(req.headers["authorization-key"]),
+          },
+        },
+      })
+      .catch(() => {
+        throw new NotAuthorizedError();
+      });
+    next();
+  })
+);
+
 // REST APis
 app.use("/servers", serversRouter);
 app.use("/servers", portsRouter);
 app.use("/servers", environmentVariablesRouter);
 app.use("/servers", volumesRouter);
 app.use("/servers", filesRouter);
-
-// Swagger
-// Use a workaround for swagger-ui-dist not being able to set custom swagger URL
-// The swaggerPath accounts for running using ts-node (start:dev) versus tsc (start).
-const swaggerPath = fs.existsSync(path.join(__dirname, "../swagger"))
-  ? path.join(__dirname, "../swagger")
-  : path.join(__dirname, "../../swagger");
-app.use("/swagger-files", express.static(swaggerPath));
-const swaggerRoutePath = "/swagger";
-const swaggerUIFSPath = swaggerUI.getAbsoluteFSPath();
-const indexContent = fs
-  .readFileSync(path.join(swaggerUIFSPath, "swagger-initializer.js"))
-  .toString()
-  .replace(
-    /https:\/\/petstore.swagger.io\/.*\/swagger.(json|yaml)/,
-    `http://${process.env.HOST}:${process.env.PORT}/swagger-files/serverManagerService.yaml`
-  );
-app.get(`${swaggerRoutePath}/swagger-initializer.js`, (req, res) => {
-  res.send(indexContent);
-});
-app.use(swaggerRoutePath, express.static(swaggerUIFSPath));
 
 // error handler
 app.use(appErrorHandler);
