# src/middlewares/appErrorHandler.ts
@@ -12,6 +12,8 @@ function appErrorHandler(
     res.status(404).json(err);
   } else if (err.name === "InternalServerError") {
     res.status(500).json(err);
+  } else if (err.name === "NotAuthorizedError") {
+    res.status(401).json(err);
   } else {
     res.status(500).json(new InternalServerError());
   }
